--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,157 @@
 @use '_reset.scss';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
+@import url('https://emoji-css.afeld.me/emoji.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+
+$primaryColor: #121212;
+$secondaryColor: #2c2c2c;
+$accentColor: #00a0ff;
+$textColor: #f5f5f5;
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
+}
+
+body {
+  background-color: $primaryColor;
+  color: $textColor;
+
+  header {
+    border-bottom: solid $accentColor 2px;
+    padding-bottom: 4rem;
+    nav {
+      background-color: $secondaryColor;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+
+      .menu {
+        display: none;
+        background-color: $secondaryColor;
+        position: absolute;
+        z-index: 80;
+        top: 100px;
+        left: 0;
+        right: 0;
+        gap: 1rem;
+        margin-inline: 1rem;
+        padding: 1rem;
+        border-radius: 1rem;
+
+        li {
+          list-style: none;
+          text-transform: uppercase;
+          letter-spacing: 3px;
+        }
+
+        .contactBtn {
+          background: none;
+          border: none;
+          outline: none;
+          background-color: $accentColor;
+          border-radius: 1rem;
+          padding: 0.5rem 1rem;
+          text-transform: uppercase;
+          letter-spacing: 3px;
+          color: $primaryColor;
+          font-weight: 700;
+        }
+      }
+
+      .showMenu {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
+
+      .burgerBtn {
+        background: none;
+        border: none;
+        outline: none;
+        color: $accentColor;
+        font-size: 2rem;
+        cursor: pointer;
+      }
+    }
+
+    .jumbotron {
+      height: 25vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 4rem;
+
+      h1 {
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+
+        span {
+          color: #00a0ff;
+        }
+      }
+
+      p {
+        font-size: 1.2rem;
+        font-weight: 300;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+
+        span {
+          color: $accentColor;
+          font-weight: 400;
+        }
+      }
+
+      button {
+        background: none;
+        border: none;
+        outline: none;
+        background-color: $secondaryColor;
+        color: $textColor;
+        border-radius: 50%;
+        padding: 1rem 1.5rem;
+        font-size: 1.2rem;
+      }
+    }
+  }
+
+  .container {
+    padding: 1rem;
+
+    .aboutMeContainer {
+      h2 {
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        padding-bottom: 0.5rem;
+        width: 50%;
+        border-bottom: $accentColor solid 2px;
+      }
+
+      .aboutMeContent {
+        background-color: $secondaryColor;
+        margin-top: 1rem;
+        padding: 1rem;
+        border-radius: 1rem;
+        box-shadow: rgba(44, 44, 44, 0.15) 1.95px 1.95px 2.6px;
+
+        img {
+          padding-bottom: 0.5rem;
+          margin: 0 auto;
+        }
+
+        p {
+          font-weight: 300;
+          text-transform: uppercase;
+          line-height: 2;
+          letter-spacing: 3px;
+        }
+      }
+    }
+  }
 }
