--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 @import url('https://emoji-css.afeld.me/emoji.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css');
 
 $primaryColor: #121212;
 $secondaryColor: #2c2c2c;
@@ -315,7 +316,9 @@ body {
         border-bottom: $accentColor solid 2px;
       }
 
-      .weatherAppContainer {
+      .weatherAppContainer,
+      .recipeAppContainer,
+      .movieAppContainer {
         background-color: $secondaryColor;
         margin-top: 1rem;
         padding: 1rem;
@@ -353,6 +356,43 @@ body {
           line-height: 2;
           letter-spacing: 3px;
           padding-top: 1rem;
+        }
+
+        .languagesUsed {
+          display: flex;
+          justify-content: left;
+          align-items: center;
+          gap: 1.5rem;
+          margin-top: 1.5rem;
+          i {
+            font-size: 3.5rem;
+          }
+        }
+
+        .buttonContainer {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+          margin-top: 1.5rem;
+          button {
+            cursor: pointer;
+            background: none;
+            outline: none;
+            border: none;
+            width: 100%;
+            color: $textColor;
+            border: $accentColor solid 3px;
+            border-radius: 1rem;
+            padding: 0.5rem;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+
+            &:hover {
+              background-color: #00a0ff;
+              transition: all ease-in 0.15s;
+              color: $primaryColor;
+            }
+          }
         }
       }
     }
