--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -417,6 +417,12 @@ body {
             }
           }
 
+          .recaptchaContainer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+
           .btnContainer {
             button {
               width: 100%;
