--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -418,11 +418,9 @@ body {
           }
 
           .recaptchaContainer {
+            display: grid;
+            place-items: center;
             margin-top: 0.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            max-width: 90%;
           }
 
           .btnContainer {
